--- a/estilos/mediaQuery.css
+++ b/estilos/mediaQuery.css
@@ -7,6 +7,7 @@
 
   section#login {
     width: 80vw;
+    height: 260px;
   }
 
   section#login > div#imagem {
@@ -26,6 +27,7 @@
   }
   section#login {
     width: 950px;
+    height: 280px;
   }
   section#login > div#imagem {
     float: right;
