--- a/estilos/style.css
+++ b/estilos/style.css
@@ -69,13 +69,37 @@ form > div.campo {
   background-color: #5f2c82;
   display: block;
   width: 100%;
-  height: 40px;
-  border-radius: 5px;
+  height: 42px;
+  border: 2px solid #5f2c82;
+  border-radius: 8px;
   margin: 5px 0px;
 }
 
 div.campo > label {
   display: none;
+}
+
+div.campo > span {
+  color: white;
+  /*background-color: black;*/
+  font-size: 2em;
+  width: 40px;
+  padding: 5px;
+}
+
+div.campo > input{
+  background-color: #94cfcd;
+  font-size: 1em;
+  width: calc(100% - 45px);
+  transform: translateY(-11px);
+  height: 100%;
+  border: 0px;
+  border-radius: 8px;
+  padding: 4px;
+}
+
+div.campo > input:focus-within {
+  background-color: white;
 }
 
 form > input[type=submit] {
