--- a/estilos/mediaQuery.css
+++ b/estilos/mediaQuery.css
@@ -27,7 +27,7 @@
   }
   section#login {
     width: 950px;
-    height: 280px;
+    height: 350px;
   }
   section#login > div#imagem {
     float: right;
@@ -44,6 +44,7 @@
   }
 
   div#formulario > p {
-    font-size: 1.2em;
+    font-size: 1em;
+    margin: 20px 0px;
   }
 }
